--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@ section {
     font-size:70px;
 }
   
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
 .well {
 	border-color:transparent;
 }
@@ -346,7 +351,7 @@ footer .nav>li>a:hover {
   	<h1 class="text-center">Ramp Design</h1>
       <div class="row">
         <div class="col-sm-12">
-          <h3 class="text-center">There are hundreds of possible ramp designs.  The National Park Service defines many in their document, <a href="http://www.nps.gov/ncrc/programs/rtca/helpfultools/launchguide.pdf">Logical Lasting Launches</a></h3>
+          <h3 class="text-center">There are hundreds of possible ramp designs.  The National Park Service defines many in their document - <a href="http://www.nps.gov/ncrc/programs/rtca/helpfultools/launchguide.pdf">Logical Lasting Launches</a></h3>
         </div>
       </div>
       <div class="row">
@@ -446,23 +451,46 @@ footer .nav>li>a:hover {
 <section class="container-fluid" id="section4">
 	<h2 class="text-center">Boat Types</h2>
     <div class="row">
-      <div class="col-sm-8 col-sm-offset-2">
-      <img src="/assets/example/bg_smartphones.jpg" class="img-responsive center-block ">
-      <p class="text-center">The following boat types are intended for support:</p>
-        <ul>
-          <li>Kayaks</li>
-          <li>Canoes</li>
-          <li>Small sailboats (e.g. Laser, Sunfish, etc)</li>
-          <li>Stand Up Paddleboard</li>  
-        </ul>
-      <p class="text-center">The following boat types are specifically <strong>excluded</strong> from support:</p>
-        <ul>
-          <li>Larger Boats</li>
-          <li>Jet Skis</li>
-          <li>Any boats being trailered</li>
-          <li>Other</li>
-        </ul>
+      <div class="col-sm-6">
+        <div class="list-group text-center">
+          <a href="#" class="list-group-item active">
+            <h2 class="list-group-item-heading">Permitted</h2>
+            <h6>The following boat types are intended for support</h6>
+          </a>
+          <a href="#" class="list-group-item">
+            <p class="list-group-item-text">Kayaks</p>
+          </a>
+          <a href="#" class="list-group-item">
+            <p class="list-group-item-text">Canoes</p>
+          </a>
+          <a href="#" class="list-group-item">
+            <p class="list-group-item-text">Small sailboats (e.g., Laser, Sunfish, etc)</p>
+          </a>
+          <a href="#" class="list-group-item">
+            <p class="list-group-item-text">Stand Up Paddleboards</p>
+          </a>
+        </div>
       </div>
+      <div class="col-sm-6">
+        <div class="list-group text-center">
+          <a href="#" class="list-group-item active">
+            <h2 class="list-group-item-heading">Excluded</h2>
+            <h6>The following boat types are specifically <strong>excluded</strong> from support</h6>
+          </a>
+          <a href="#" class="list-group-item">
+            <p class="list-group-item-text">Any boat trailered by a car</p>
+          </a>
+          <a href="#" class="list-group-item">
+            <p class="list-group-item-text">Motor boats</p>
+          </a>
+          <a href="#" class="list-group-item">
+            <p class="list-group-item-text">Larger Boats</p>
+          </a>
+          <a href="#" class="list-group-item">
+            <p class="list-group-item-text">Jet Skis</p>
+          </a>
+        </div>
+      </div>      
     </div>
 </section>
 
