--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ footer .nav>li>a:hover {
         <li><a href="#section3">Design</a></li>
         <li><a href="#section4">Permitted Boats</a></li>
         <li><a href="#section5">Timing</a></li>
-        <li><a href="#section6">Why</a></li>
+        <li><a href="#section6">Contribute</a></li>
         <li>&nbsp;</li>
       </ul>
       <form class="navbar-form">
@@ -403,7 +403,7 @@ footer .nav>li>a:hover {
         <div class="col-sm-4 col-xs-12">
               <div class="list-group text-right">
                 <a href="#" class="list-group-item active">
-                  <h2 class="list-group-item-heading">Floating dock with Modular polyethylene floats</h2>
+                  <h2 class="list-group-item-heading">Modular Floats</h2>
                   <h6>Polyethylene, the most frequently chosen plastic, can function as both frame and float; they may have grooves and brackets that attach easily to shoreline structures or floats may have built-in cleats, which facilitate anchoring</h6>
                 </a>
                 <a href="#" class="list-group-item">
