--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@ footer .nav>li>a:hover {
     <div class="navbar-collapse collapse" id="navbar-collapsible">
       <ul class="nav navbar-nav navbar-left">
         <li><a href="#section1">Welcome</a></li>
-        <li><a href="#section2">Location</a></li>
-        <li><a href="#section3">Design</a></li>
+        <li><a href="#section2">Locations</a></li>
+        <li><a href="#section3">Ramp Design</a></li>
         <li><a href="#section4">Permitted Boats</a></li>
         <li><a href="#section5">Timing</a></li>
         <li><a href="#section6">Contribute</a></li>
@@ -425,7 +425,7 @@ footer .nav>li>a:hover {
 </section>
 
 <section class="container-fluid" id="section4">
-	<h2 class="text-center">Boat Types</h2>
+	<h1 class="text-center">Boat Types</h1>
     <div class="row">
       <div class="col-sm-6">
         <div class="list-group text-center">
@@ -471,13 +471,18 @@ footer .nav>li>a:hover {
 </section>
 
 <section class="container-fluid" id="section5">
-	<h2 class="text-center">Timing</h2>
+	<h1 class="text-center">Timing</h1>
     <p class="text-center lead">Likely not ready for 2015, the boat launch is being targeted for summer of 2016</p>    
 </section>
 
 <section class="container-fluid" id="section6">
-  <h2 class="text-center">Donate</h2>
-    <p class="text-center lead">Coming soon</p>    
+  <h1 class="text-center">Get Involved</h1>
+    <h2 class="text-center">Donate</h2>
+      <p class="text-center lead">Coming soon</p>
+    <h2 class="text-center">Write Your Rep</h2>
+      <p class="text-center lead">Coming soon</p>
+    <h2 class="text-center">How Else Can I Help?</h2>
+      <p class="text-center lead">Coming soon</p>      
 </section>
 
 <section class="container" id="section7">
@@ -506,40 +511,29 @@ footer .nav>li>a:hover {
 <footer id="footer">
   <div class="container">
     <div class="row">    
-      <div class="col-xs-6 col-sm-6 col-md-3 column">          
+      <div class="col-xs-6 col-sm-6 col-md-4 column">          
           <h4>Information</h4>
           <ul class="nav">
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Benefits</a></li>
-            <li><a href="#">Developers</a></li>
+            <li><a href="#">Ghent Neighborhood League</a></li>
+            <li><a href="#">Norfolk Parks and Recreation</a></li>
+            <li><a href="#">National Park Service - Logical Lasting Launches</a></li>
           </ul> 
         </div>
-      <div class="col-xs-6 col-md-3 column">          
+      <div class="col-xs-6 col-md-4 column">          
           <h4>Follow Us</h4>
           <ul class="nav">
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Google+</a></li>
-            <li><a href="#">Pinterest</a></li>
+            <li><a href="https://twitter.com/HagueBoatLaunch">Twitter</a></li>
+            <li><a href="https://www.facebook.com/TheHagueBoatLaunch">Facebook</a></li>
+            <li><a href="http://instagram.com/thehagueboatlaunch/">Instagram</a></li>
           </ul> 
       </div>
-      <div class="col-xs-6 col-md-3 column">          
-          <h4>Contact Us</h4>
-          <ul class="nav">
-            <li><a href="#">Email</a></li>
-            <li><a href="#">Headquarters</a></li>
-            <li><a href="#">Management</a></li>
-            <li><a href="#">Support</a></li>
-          </ul> 
-      </div>
-      <div class="col-xs-6 col-md-3 column">          
+      <div class="col-xs-6 col-md-4 column">          
           <h4>Customer Service</h4>
           <ul class="nav">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Delivery Information</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms &amp; Conditions</a></li>
+            <li><a href="mailto:matt@thehagueboatlaunch.com">Email</a></li>
+            <li><a href="/aboutus.html">About Us</a></li>
+            <li><a href="/terms.html">Privacy Policy</a></li>
+            <li><a href="/terms.html">Terms &amp; Conditions</a></li>
           </ul> 
       </div>
     </div><!--/row-->
