--- a/aboutus.html
+++ b/aboutus.html
@@ -143,7 +143,7 @@ footer .nav>li>a:hover {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">The Hague Boat Launch</a>
+      <a class="navbar-brand" href="http://www.thehagueboatlaunch.com/index.html">The Hague Boat Launch</a>
     </div>
     <div class="navbar-collapse collapse" id="navbar-collapsible">
       <ul class="nav navbar-nav navbar-left">
@@ -153,7 +153,7 @@ footer .nav>li>a:hover {
         <li><a href="http://www.thehagueboatlaunch.com/index.html#section4">Permitted Boats</a></li>
         <li><a href="http://www.thehagueboatlaunch.com/index.html#section5">Timing</a></li>
         <li><a href="http://www.thehagueboatlaunch.com/index.html#section6">Why</a></li> 
-        <li><a href="#">Terms and Conditions</a></li> 
+        <li><a href="#">About Us</a></li> 
         <li>&nbsp;</li>
       </ul>
       <form class="navbar-form">
@@ -181,86 +181,54 @@ footer .nav>li>a:hover {
 </nav>
 
 <section class="container-fluid" id="section1">
-  	<h1 class="text-center v-center">Terms and Conditions ("Terms")</h1>
+  	<h1 class="text-center v-center">Who We Are</h1>
+    <p class="text-center lead">We're avid water lovers who want to get on the water!</p>   
   	<div class="container">
       <div class="row">
-
-<p>Last updated: February 12, 2015</p>
-
-<p>Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully before using the http://www.thehagueboatlaunch.com website (the "Service") operated by The Hague Boat Launch ("us", "we", or "our").</p>
-
-<p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
-
-<p>By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.</p>
-
-
-<p><strong>Links To Other Web Sites</strong></p>
-
-<p>Our Service may contain links to third-party web sites or services that are not owned or controlled by The Hague Boat Launch.</p>
-
-<p>The Hague Boat Launch has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that The Hague Boat Launch shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.</p>
-
-<p>We strongly advise you to read the terms and conditions and privacy policies of any third-party web sites or services that you visit.</p>
-
-
-<p><strong>Governing Law</strong></p>
-
-<p>These Terms shall be governed and construed in accordance with the laws of Virginia, United States, without regard to its conflict of law provisions.</p>
-
-<p>Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service.</p>
-
-<p><strong>Changes</strong></p>
-
-<p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.</p>
-
-<p>By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, please stop using the Service.</p>
-
-<p>Our Terms and Conditions agreement was created on TermsFeed.com</p>
-
-<p><strong>Contact Us</strong></p>
-
-<p>If you have any questions about these Terms, please contact us.</p>
-
+          <div class="col-sm-4">
+            <div class="row">
+              <div class="col-sm-10 col-sm-offset-2 text-center"><h3>Norfolk Residents</h3><p>Many of us live in the Ghent neighborhood of Norfolk, Virginia.  We want a boat launch fo Norfolk residents as well as visitors.</p><i class="fa fa-home fa-5x"></i></div>
+            </div>
+          </div>
+          <div class="col-sm-4 text-center">
+            <div class="row">
+              <div class="col-sm-10 col-sm-offset-1 text-center"><h3>Water Lovers</h3><p>We love the water and the many opportunities to enjoy the water in Norfolk.  We look forward to sailing out to watch sunsets on the Elizabeth River and paddling out to watch the fireworks during Harborfest or 4th of July celebrations.</p><i class="fa fa-heart fa-5x"></i></div>
+            </div>
+          </div>
+          <div class="col-sm-4 text-center">
+            <div class="row">
+              <div class="col-sm-10 text-center"><h3>Dedicated Community Activists</h3><p>We are eager to continually enhance our city with smart, deliberate, and reasonable improvements.  We love Norfolk and particularly the Ghent neighborhood and support this as one of the many improvements that make this the best neighborhood in Hampton Roads.</p><i class="fa fa-group fa-5x"></i></div>
+            </div>
+          </div>
       </div><!--/row-->
 </section>
 
 <footer id="footer">
   <div class="container">
     <div class="row">    
-      <div class="col-xs-6 col-sm-6 col-md-3 column">          
+      <div class="col-xs-6 col-sm-6 col-md-4 column">          
           <h4>Information</h4>
           <ul class="nav">
-            <li><a href="about-us.html">Products</a></li>
-            <li><a href="about-us.html">Services</a></li>
-            <li><a href="about-us.html">Benefits</a></li>
-            <li><a href="elements.html">Developers</a></li>
+            <li><a href="#">Ghent Neighborhood League</a></li>
+            <li><a href="#">Norfolk Parks and Recreation</a></li>
+            <li><a href="#">National Park Service - Logical Lasting Launches</a></li>
           </ul> 
         </div>
-      <div class="col-xs-6 col-md-3 column">          
+      <div class="col-xs-6 col-md-4 column">          
           <h4>Follow Us</h4>
           <ul class="nav">
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Google+</a></li>
-            <li><a href="#">Pinterest</a></li>
+            <li><a href="https://twitter.com/HagueBoatLaunch">Twitter</a></li>
+            <li><a href="https://www.facebook.com/TheHagueBoatLaunch">Facebook</a></li>
+            <li><a href="http://instagram.com/thehagueboatlaunch/">Instagram</a></li>
           </ul> 
       </div>
-      <div class="col-xs-6 col-md-3 column">          
-          <h4>Contact Us</h4>
-          <ul class="nav">
-            <li><a href="#">Email</a></li>
-            <li><a href="#">Headquarters</a></li>
-            <li><a href="#">Management</a></li>
-            <li><a href="#">Support</a></li>
-          </ul> 
-      </div>
-      <div class="col-xs-6 col-md-3 column">          
+      <div class="col-xs-6 col-md-4 column">          
           <h4>Customer Service</h4>
           <ul class="nav">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Delivery Information</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms &amp; Conditions</a></li>
+            <li><a href="mailto:matt@thehagueboatlaunch.com">Email</a></li>
+            <li><a href="/aboutus.html">About Us</a></li>
+            <li><a href="/terms.html">Privacy Policy</a></li>
+            <li><a href="/terms.html">Terms &amp; Conditions</a></li>
           </ul> 
       </div>
     </div><!--/row-->
