--- a/index.html
+++ b/index.html
@@ -472,17 +472,51 @@ footer .nav>li>a:hover {
 
 <section class="container-fluid" id="section5">
 	<h1 class="text-center">Timing</h1>
-    <p class="text-center lead">Likely not ready for 2015, the boat launch is being targeted for summer of 2016</p>    
+    <p class="text-center lead">Likely not ready for 2015, the boat launch is being targeted for summer of 2016</p>
 </section>
 
 <section class="container-fluid" id="section6">
   <h1 class="text-center">Get Involved</h1>
     <h2 class="text-center">Donate</h2>
       <p class="text-center lead">Coming soon</p>
-    <h2 class="text-center">Write Your Rep</h2>
-      <p class="text-center lead">Coming soon</p>
+    <h2 class="text-center">Write Your Norfolk Rep</h2>
+      <p class="text-center lead">Norfolk City Council's awareness and encouragement in this project will help make the boat launch dream a reality!</p>
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3 col-xs-12">
+                <div class="list-group text-center">
+                  <a href="#" class="list-group-item active">
+                    <h2 class="list-group-item-heading">Norfolk Representatives</h2>
+                  </a>
+                  <a href="mailto:mayor@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Fraim, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
+                    <p class="list-group-item-text">Mayor: Mr. Paul D. Fraim</p>
+                  </a>
+                  <a href="mailto:andrew.protogyrou@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Protogyrou, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
+                    <p class="list-group-item-text">Ward 1 (Naval Station): Andrew A. Protogyrou</p>
+                  </a>
+                  <a href="mailto:theresa.whibley@norfolk.gov?subject=Boat Launch in The Hague&body=Ms. Whibley, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
+                    <p class="list-group-item-text">Ward 2 (Ghent, Larchmont): Theresa W. Whibley</p>
+                  </a>
+                  <a href="mailto:mamie.johnson@norfolk.gov?subject=Boat Launch in The Hague&body=Ms. Johnson, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
+                    <p class="list-group-item-text">Ward 3 (Ballentine, Fairmont, Norview): Mamie Johnson</p>
+                  </a>
+                  <a href="mailto:paul.riddick@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Riddick, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
+                    <p class="list-group-item-text">Ward 4 (Berkley, Ingleside, Military Circle): Paul R. Riddick</p>
+                  </a>                                    
+                  <a href="mailto:thomas.smigiel@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Smigiel, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
+                    <p class="list-group-item-text">Ward 5 (Ocean View): Thomas R. Smigiel, Jr.</p>
+                  </a>
+                  <a href="mailto:barclay.winn@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Winn, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
+                    <p class="list-group-item-text">Superward 6: Barclay C. Winn</p>
+                  </a>
+                  <a href="mailto:angelia.williams@norfolk.gov?subject=Boat Launch in The Hague&body=Ms. Williams, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
+                    <p class="list-group-item-text">Superward 7: Angelia M. Williams</p>
+                  </a>
+                </div>
+            </div><!--/middle-->
+        </div>
+
     <h2 class="text-center">How Else Can I Help?</h2>
-      <p class="text-center lead">Coming soon</p>      
+      <p class="text-center lead"><a href="mailto:matt@thehagueboatlaunch.com">Email us!</a></p>      
 </section>
 
 <section class="container" id="section7">
