--- a/terms.html
+++ b/terms.html
@@ -143,7 +143,7 @@ footer .nav>li>a:hover {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">The Hague Boat Launch</a>
+      <a class="navbar-brand" href="http://www.thehagueboatlaunch.com/index.html">The Hague Boat Launch</a>
     </div>
     <div class="navbar-collapse collapse" id="navbar-collapsible">
       <ul class="nav navbar-nav navbar-left">
@@ -225,40 +225,29 @@ footer .nav>li>a:hover {
 <footer id="footer">
   <div class="container">
     <div class="row">    
-      <div class="col-xs-6 col-sm-6 col-md-3 column">          
+      <div class="col-xs-6 col-sm-6 col-md-4 column">          
           <h4>Information</h4>
           <ul class="nav">
-            <li><a href="about-us.html">Products</a></li>
-            <li><a href="about-us.html">Services</a></li>
-            <li><a href="about-us.html">Benefits</a></li>
-            <li><a href="elements.html">Developers</a></li>
+            <li><a href="#">Ghent Neighborhood League</a></li>
+            <li><a href="#">Norfolk Parks and Recreation</a></li>
+            <li><a href="#">National Park Service - Logical Lasting Launches</a></li>
           </ul> 
         </div>
-      <div class="col-xs-6 col-md-3 column">          
+      <div class="col-xs-6 col-md-4 column">          
           <h4>Follow Us</h4>
           <ul class="nav">
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Google+</a></li>
-            <li><a href="#">Pinterest</a></li>
+            <li><a href="https://twitter.com/HagueBoatLaunch">Twitter</a></li>
+            <li><a href="https://www.facebook.com/TheHagueBoatLaunch">Facebook</a></li>
+            <li><a href="http://instagram.com/thehagueboatlaunch/">Instagram</a></li>
           </ul> 
       </div>
-      <div class="col-xs-6 col-md-3 column">          
-          <h4>Contact Us</h4>
-          <ul class="nav">
-            <li><a href="#">Email</a></li>
-            <li><a href="#">Headquarters</a></li>
-            <li><a href="#">Management</a></li>
-            <li><a href="#">Support</a></li>
-          </ul> 
-      </div>
-      <div class="col-xs-6 col-md-3 column">          
+      <div class="col-xs-6 col-md-4 column">          
           <h4>Customer Service</h4>
           <ul class="nav">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Delivery Information</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms &amp; Conditions</a></li>
+            <li><a href="mailto:matt@thehagueboatlaunch.com">Email</a></li>
+            <li><a href="/aboutus.html">About Us</a></li>
+            <li><a href="/terms.html">Privacy Policy</a></li>
+            <li><a href="/terms.html">Terms &amp; Conditions</a></li>
           </ul> 
       </div>
     </div><!--/row-->
