--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@ footer .nav>li>a:hover {
     </div>
     <div class="row">
       <div class="col-sm-12 col-xs-12">
-        <h2><a id="loc1">Dundaff and Fairfax</a></h2>
-        <p class="lead">On the west side of Smith's Creek, this potential location is nearby the Stone Park and Stockley Gardens.</p>
+        <h2>Dundaff and Fairfax</h2>
+        <p class="lead">On the western branch of Smith's Creek, this potential location is nearby the Stone Park and Stockley Gardens.</p>
       </div>
       <div class="row">
         <div class="col-sm-4 col-xs-12 text-center">
@@ -268,7 +268,9 @@ footer .nav>li>a:hover {
               <ul>
                 <li>Large amount of unused, city-owned land</li>
                 <li>Substantial parking available</li>
-                <li>Walking distance to many residents</li>
+                <li>Walking distance to many residents, central to The Hague</li>
+                <li>Can serve as an extension to Stockley Gardens</li>
+                <li>Close to Ghent area business (e.g. Press 626)</li>
               </ul>
           </div>
         </div>
@@ -277,7 +279,6 @@ footer .nav>li>a:hover {
             <h2 class="list-group-item-heading text-center">Cons</h2>
               <ul>
                 <li>Potential inconvenience to residents on Dundaff</li>
-                <li>Need to check depth</li>
           </div>
         </div>
       </div>
@@ -490,26 +491,17 @@ footer .nav>li>a:hover {
                   <a href="mailto:mayor@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Fraim, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
                     <p class="list-group-item-text">Mayor: Mr. Paul D. Fraim</p>
                   </a>
-                  <a href="mailto:andrew.protogyrou@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Protogyrou, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
-                    <p class="list-group-item-text">Ward 1 (Naval Station): Andrew A. Protogyrou</p>
-                  </a>
                   <a href="mailto:theresa.whibley@norfolk.gov?subject=Boat Launch in The Hague&body=Ms. Whibley, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
                     <p class="list-group-item-text">Ward 2 (Ghent, Larchmont): Theresa W. Whibley</p>
-                  </a>
-                  <a href="mailto:mamie.johnson@norfolk.gov?subject=Boat Launch in The Hague&body=Ms. Johnson, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
-                    <p class="list-group-item-text">Ward 3 (Ballentine, Fairmont, Norview): Mamie Johnson</p>
-                  </a>
-                  <a href="mailto:paul.riddick@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Riddick, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
-                    <p class="list-group-item-text">Ward 4 (Berkley, Ingleside, Military Circle): Paul R. Riddick</p>
-                  </a>                                    
-                  <a href="mailto:thomas.smigiel@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Smigiel, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
-                    <p class="list-group-item-text">Ward 5 (Ocean View): Thomas R. Smigiel, Jr.</p>
                   </a>
                   <a href="mailto:barclay.winn@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Winn, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
                     <p class="list-group-item-text">Superward 6: Barclay C. Winn</p>
                   </a>
-                  <a href="mailto:angelia.williams@norfolk.gov?subject=Boat Launch in The Hague&body=Ms. Williams, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
-                    <p class="list-group-item-text">Superward 7: Angelia M. Williams</p>
+                  <a href="mailto:city.manager@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Jones, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
+                    <p class="list-group-item-text">Norfolk City Manager: Marcus D. Jones</p>
+                  </a>
+                  <a href="mailto:rpos@Norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Crittendon, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
+                    <p class="list-group-item-text">Norfolk Recreation, Parks, and Open Space Director: Darrell Crittendon</p>
                   </a>
                 </div>
             </div><!--/middle-->
