--- a/index.html
+++ b/index.html
@@ -237,15 +237,15 @@ footer .nav>li>a:hover {
             <div class="list-group text-center">
               <h2 class="list-group-item-heading">Current Options</h2>
               <h6>Under consideration</h6>
-              <a href="#loc1" class="list-group-item">
+              <div class="list-group-item">
                 <p class="list-group-item-text">Dundaff and Fairfax</p>
-              </a>
-              <a href="#loc2" class="list-group-item">
+              </div>
+              <div class="list-group-item">
                 <p class="list-group-item-text">Mowbray and Botetourt</p>
-              </a>
-              <a href="#loc3" class="list-group-item">
+              </div>
+              <div class="list-group-item">
                 <p class="list-group-item-text">Mowbray and Fairfax</p>
-              </a>
+              </div>
             </div>
         </div><!--/middle-->
     </div>
