--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@ a.list-group-item.active,[class*='-info'] {
     color:#fff;
 }
   
+.blue-list-group-item.active,[class*='-info'] {
+  background-color: #168ccc;
+    color:#fff;
+}
+
+.gray-list-group-item.active,[class*='-info'] {
+  background-color: #A4A4A4;
+    color:#2E2E2E;
+}
+
 #section1 {
 	background-color: #168ccc;
     color:#dedeff;
@@ -235,7 +245,7 @@ footer .nav>li>a:hover {
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3 col-xs-12">
             <div class="list-group text-center">
-              <h2 class="list-group-item-heading">Current Options</h2>
+              <h2 class="blue-list-group-item active">Current Options</h2>
               <h6>Under consideration</h6>
               <div class="list-group-item">
                 <p class="list-group-item-text">Dundaff and Fairfax</p>
@@ -356,67 +366,70 @@ footer .nav>li>a:hover {
       <div class="row">
         <div class="col-sm-4 col-xs-12">
               <div class="list-group">
-                <a href="#" class="list-group-item active">
+                <div class="gray-list-group-item active">
                   <h2 class="list-group-item-heading">Floating Launch</h2>
+                  <img src="FloatingLaunch.png" alt="Floating Launch" style="width:304px;height:228px">
                   <h6>Typically composed of a deck, frame, and floats, they are anchored to the shore. Paddlers launch from the deck, which is supported by the frame, while the floats beneath the frame provide buoyancy</h6>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Would require pilings to be sufficiently high to anchor float in flood tides</p>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Typically require 3 feet of water at all times</p>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Adjusts to fluctuating water levels common in Smith's Creek</p>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Potential concern about impact of freezing</p>
-                </a>
+                </div>
               </div>
         </div><!--/left-->
         
         <div class="col-sm-4 col-xs-12">
               <div class="list-group text-center">
-                <a href="#" class="list-group-item active">
+                <div class="gray-list-group-item active">
+                  <img src="FixedRamp.png" alt="Fixed Ramp" style="width:304px;height:228px">
                   <h2 class="list-group-item-heading">Fixed Ramp</h2>
                   <h6>Concrete ramps may be used as launches by themselves or in combination with floating launches, piers, bridges, dock abutments, bulkheads, and rock cribs</h6>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Would require method to increase traction (e.g. V-grooves)</p>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Durable; not subject to rot or rust; not subject to tidal flooding problems</p>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Question of aesthetics - although mitigated with finishing methods with river rocks, fieldstones, or salt-finishing</p>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Concern over cleaning if there is mud build-up from flooding</p>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Surface can be slippery</p>
-                </a>
+                </div>
               </div>
         </div><!--/middle-->
         
         <div class="col-sm-4 col-xs-12">
               <div class="list-group text-right">
-                <a href="#" class="list-group-item active">
+                <div class="gray-list-group-item active">
+                  <img src="ModularFloats.png" alt="Modular Floats" style="width:304px;height:228px">
                   <h2 class="list-group-item-heading">Modular Floats</h2>
                   <h6>Polyethylene, the most frequently chosen plastic, can function as both frame and float; they may have grooves and brackets that attach easily to shoreline structures or floats may have built-in cleats, which facilitate anchoring</h6>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Cheaper than other floating methods</p>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Concern over aesthetics</p>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Same concerns about freezing, requiring 3 feet of depth</p>
-                </a>
-                <a href="#" class="list-group-item">
+                </div>
+                <div class="list-group-item">
                   <p class="list-group-item-text">Same benefit with adjusting for flood tides</p>
-                </a>
+                </div>
               </div>
         </div><!--/right-->        
       </div><!--/row-->
@@ -428,42 +441,42 @@ footer .nav>li>a:hover {
     <div class="row">
       <div class="col-sm-6">
         <div class="list-group text-center">
-          <a href="#" class="list-group-item active">
+          <div class="blue-list-group-item active">
             <h2 class="list-group-item-heading">Permitted</h2>
             <h6>The following boat types are intended for support</h6>
-          </a>
-          <a href="#" class="list-group-item">
+          </div>
+          <div class="list-group-item">
             <p class="list-group-item-text">Kayaks</p>
-          </a>
-          <a href="#" class="list-group-item">
+          </div>
+          <div class="list-group-item">
             <p class="list-group-item-text">Canoes</p>
-          </a>
-          <a href="#" class="list-group-item">
+          </div>
+          <div class="list-group-item">
             <p class="list-group-item-text">Small sailboats (e.g., Laser, Sunfish, etc)</p>
-          </a>
-          <a href="#" class="list-group-item">
+          </div>
+          <div class="list-group-item">
             <p class="list-group-item-text">Stand Up Paddleboards</p>
-          </a>
+          </div>
         </div>
       </div>
       <div class="col-sm-6">
         <div class="list-group text-center">
-          <a href="#" class="list-group-item active">
+          <div class="blue-list-group-item active">
             <h2 class="list-group-item-heading">Excluded</h2>
             <h6>The following boat types are specifically <strong>excluded</strong> from support</h6>
-          </a>
-          <a href="#" class="list-group-item">
+          </div>
+          <div class="list-group-item">
             <p class="list-group-item-text">Any boat trailered by a car</p>
-          </a>
-          <a href="#" class="list-group-item">
+          </div>
+          <div class="list-group-item">
             <p class="list-group-item-text">Motor boats</p>
-          </a>
-          <a href="#" class="list-group-item">
+          </div>
+          <div class="list-group-item">
             <p class="list-group-item-text">Larger Boats</p>
-          </a>
-          <a href="#" class="list-group-item">
+          </div>
+          <div class="list-group-item">
             <p class="list-group-item-text">Jet Skis</p>
-          </a>
+          </div>
         </div>
       </div>      
     </div>
@@ -483,9 +496,9 @@ footer .nav>li>a:hover {
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 col-xs-12">
                 <div class="list-group text-center">
-                  <a href="#" class="list-group-item active">
+                  <div class="gray-list-group-item active">
                     <h2 class="list-group-item-heading">Norfolk Representatives</h2>
-                  </a>
+                  </div>
                   <a href="mailto:mayor@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Fraim, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
                     <p class="list-group-item-text">Mayor: Mr. Paul D. Fraim</p>
                   </a>
