--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ footer .nav>li>a:hover {
         <li><a href="#section2">Locations</a></li>
         <li><a href="#section3">Ramp Design</a></li>
         <li><a href="#section4">Permitted Boats</a></li>
-        <li><a href="#section5">Timing</a></li>
+        <li><a href="#section5">Contact</a></li>
         <li><a href="#section6">Contribute</a></li>
         <li>&nbsp;</li>
       </ul>
@@ -368,9 +368,9 @@ footer .nav>li>a:hover {
               <div class="list-group">
                 <div class="gray-list-group-item active">
                   <h2 class="list-group-item-heading">Floating Launch</h2>
-                  <img src="FloatingLaunch.png" alt="Floating Launch" style="width:304px;height:228px">
                   <h6>Typically composed of a deck, frame, and floats, they are anchored to the shore. Paddlers launch from the deck, which is supported by the frame, while the floats beneath the frame provide buoyancy</h6>
-                </div>
+                </div> 
+                <img src="FloatingLaunch.png" alt="Floating Launch" style="width:304px;height:228px">
                 <div class="list-group-item">
                   <p class="list-group-item-text">Would require pilings to be sufficiently high to anchor float in flood tides</p>
                 </div>
@@ -389,10 +389,10 @@ footer .nav>li>a:hover {
         <div class="col-sm-4 col-xs-12">
               <div class="list-group text-center">
                 <div class="gray-list-group-item active">
-                  <img src="FixedRamp.png" alt="Fixed Ramp" style="width:304px;height:228px">
                   <h2 class="list-group-item-heading">Fixed Ramp</h2>
                   <h6>Concrete ramps may be used as launches by themselves or in combination with floating launches, piers, bridges, dock abutments, bulkheads, and rock cribs</h6>
                 </div>
+                <img src="FixedRamp.png" alt="Fixed Ramp" style="width:304px;height:228px">
                 <div class="list-group-item">
                   <p class="list-group-item-text">Would require method to increase traction (e.g. V-grooves)</p>
                 </div>
@@ -414,10 +414,10 @@ footer .nav>li>a:hover {
         <div class="col-sm-4 col-xs-12">
               <div class="list-group text-right">
                 <div class="gray-list-group-item active">
-                  <img src="ModularFloats.png" alt="Modular Floats" style="width:304px;height:228px">
                   <h2 class="list-group-item-heading">Modular Floats</h2>
                   <h6>Polyethylene, the most frequently chosen plastic, can function as both frame and float; they may have grooves and brackets that attach easily to shoreline structures or floats may have built-in cleats, which facilitate anchoring</h6>
                 </div>
+                <img src="ModularFloats.png" alt="Modular Floats" style="width:304px;height:228px">
                 <div class="list-group-item">
                   <p class="list-group-item-text">Cheaper than other floating methods</p>
                 </div>
@@ -483,8 +483,21 @@ footer .nav>li>a:hover {
 </section>
 
 <section class="container-fluid" id="section5">
-	<h1 class="text-center">Timing</h1>
-    <p class="text-center lead">Likely not ready for 2015, the boat launch is being targeted for summer of 2016</p>
+	<h1 class="text-center">Contact</h1>
+    <div class="row">
+      <div class="col-sm-12 col-xs-12">
+        <h2>Email</h2>
+        <p class="lead">TBD.</p>
+      </div>
+        <p class="lead">Ghent residents, in cooperation with the Ghent Neighborhood League, City of Norfolk and other entities, are exploring the feasibility of creating a kayak-style launch in the Hague area to celebrate the joys of our Ghent neighborhood waterway.  This process will include design research and development,  as well as necessary community, city and any other approvals needed... and many steps in-between.  Please join us"</p>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 col-xs-12">
+        <h2>Ghent Neighborhood League</h2>
+        <p class="lead">TBD.</p>
+      </div>
+        <p class="lead">TBD"</p>
+    </div>
 </section>
 
 <section class="container-fluid" id="section6">
