--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ a.list-group-item.active,[class*='-info'] {
 }
 
 .gray-list-group-item.active,[class*='-info'] {
-  background-color: #A4A4A4;
-    color:#2E2E2E;
+  background-color: #686868;
+    color:#e5e5ef;
 }
 
 #section1 {
@@ -110,7 +110,7 @@ a.list-group-item.active,[class*='-info'] {
   
 #section3 {
 	background-color: #168ccc;
-    color:#ddd;
+    color:#686868;
 }
 
 #section4 {
@@ -247,20 +247,20 @@ footer .nav>li>a:hover {
             <div class="list-group text-center">
               <h2 class="blue-list-group-item active">Current Options</h2>
               <h6>Under consideration</h6>
-              <div class="list-group-item">
+              <a href="#loc1" class="list-group-item">
                 <p class="list-group-item-text">Dundaff and Fairfax</p>
-              </div>
-              <div class="list-group-item">
+              </a>
+              <a href="#loc2" class="list-group-item">
                 <p class="list-group-item-text">Mowbray and Botetourt</p>
-              </div>
-              <div class="list-group-item">
+              </a>
+              <a href="#loc3" class="list-group-item">
                 <p class="list-group-item-text">Mowbray and Fairfax</p>
-              </div>
+              </a>
             </div>
         </div><!--/middle-->
     </div>
     <div class="row">
-      <div class="col-sm-12 col-xs-12">
+      <div class="col-sm-12 col-xs-12" id="loc1">
         <h2>Dundaff and Fairfax</h2>
         <p class="lead">On the western branch of Smith's Creek, this potential location is nearby the Stone Park and Stockley Gardens.</p>
       </div>
@@ -270,7 +270,7 @@ footer .nav>li>a:hover {
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d836.5235990350749!2d-76.29923899999997!3d36.859265000000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDUxJzMzLjQiTiA3NsKwMTcnNTcuMyJX!5e1!3m2!1sen!2sus!4v1423446507665" width="400" height="300" frameborder="0" style="border:0"></iframe>
           </div>
         </div>
-        <div class="col-sm-4 col-xs-12">
+        <div class="col-sm-4 col-xs-12" id="loc2">
           <div class="list-group">
             <h2 class="list-group-item-heading text-center">Pros</h2>
               <ul>
@@ -282,7 +282,7 @@ footer .nav>li>a:hover {
               </ul>
           </div>
         </div>
-        <div class="col-sm-4 col-xs-12">
+        <div class="col-sm-4 col-xs-12" id="loc3">
           <div class="list-group">
             <h2 class="list-group-item-heading text-center">Cons</h2>
               <ul>
@@ -293,7 +293,7 @@ footer .nav>li>a:hover {
     </div>
     <div class="row"> 
       <div class="col-sm-12 col-xs-12">
-        <h2><a id="loc2">Mowbray and Botetourt</a></h2>
+        <h2>Mowbray and Botetourt</h2>
         <p class="lead">On the East side of Smith's Creek, this potential location is nearby the Hague footbridge and the Chrysler Museum.</p>
       </div>
       <div class="row">
@@ -324,7 +324,7 @@ footer .nav>li>a:hover {
     </div>
     <div class="row">
       <div class="col-sm-12 col-xs-12">
-        <h2><a id="loc3">Mowbray and Fairfax</a></h2>
+        <h2>Mowbray and Fairfax</h2>
         <p class="lead">On the West side of Smith's Creek, this potential location is in The Hague neighborhood and part of the current Hague walking park.</p>
       </div>
       <div class="row">
